--- a/arch/arm64/configs/b1c1_defconfig
+++ b/arch/arm64/configs/b1c1_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Goldust-v1.5"
+CONFIG_LOCALVERSION="-Ayaya-Kanaria"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_KERNEL_LZ4=y
 # CONFIG_FHANDLE is not set
