--- a/arch/arm64/configs/b1c1_defconfig
+++ b/arch/arm64/configs/b1c1_defconfig
@@ -725,8 +725,10 @@ CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_CFQ=y
+# CONFIG_DEFAULT_CFQ is not set
 CONFIG_IOSCHED_FIOPS=y
-CONFIG_DEFAULT_CFQ=y
+CONFIG_DEFAULT_MAPLE=y
+CONFIG_DEFAULT_IOSCHED="maple"
 CONFIG_DEFAULT_IOSCHED="cfq"
 
 #
